care/force-app/main/default/objects/SMB_Lead__c/SMB_Lead__c.object-meta.xml
<CustomObject>
    <label>SMB Lead</label>
    <nameField>
        <label>SMB Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMB Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>