care/force-app/main/default/objects/SMB_Lead__c/fields/ACA_Certified__c.field-meta.xml
<CustomField>
    <fullName>ACA_Certified__c</fullName>
    <description>For the camps category: ACA Certification (American Camp Association)</description>
    <inlineHelpText>ACA Certification (American Camp Association)</inlineHelpText>
    <label>ACA Certified?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>