care/force-app/main/default/objects/SMB_Lead__c/fields/BBB__c.field-meta.xml
<CustomField>
    <fullName>BBB__c</fullName>
    <label>BBB?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>