care/force-app/main/default/objects/SMB_Lead__c/fields/Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>Brand_ID__c</fullName>
    <label>Brand ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>