care/force-app/main/default/objects/SMB_Lead__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>childCareCenter</fullName>
                <default>true</default>
                <label>childCareCenter</label>
            </value>
            <value>
                <fullName>camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>