care/force-app/main/default/objects/SMB_Lead__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>Care.com SMB company ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Care.com SMB company ID</inlineHelpText>
    <label>Company ID</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>