care/force-app/main/default/objects/SMB_Lead__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <inlineHelpText>Do not use, safe to ignore</inlineHelpText>
    <label>Delivery Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>