care/force-app/main/default/objects/SMB_Lead__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Do not use, safe to ignore</inlineHelpText>
    <label>Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>