care/force-app/main/default/objects/SMB_Lead__c/fields/Exported_to_Care_com__c.field-meta.xml
<CustomField>
    <fullName>Exported_to_Care_com__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System checked after company has been pulled into the Care.com database.</description>
    <label>Exported to Care.com</label>
    <type>Checkbox</type>
</CustomField>