care/force-app/main/default/objects/SMB_Lead__c/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <description>Latitude of business</description>
    <inlineHelpText>Latitude of business</inlineHelpText>
    <label>latitude</label>
    <length>15</length>
    <type>Text</type>
</CustomField>