care/force-app/main/default/objects/SMB_Lead__c/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <description>Longitude of business</description>
    <inlineHelpText>Longitude of business</inlineHelpText>
    <label>longitude</label>
    <length>15</length>
    <type>Text</type>
</CustomField>