care/force-app/main/default/objects/SMB_Lead__c/fields/NAEYC_Certified__c.field-meta.xml
<CustomField>
    <fullName>NAEYC_Certified__c</fullName>
    <label>NAEYC Certified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>