care/force-app/main/default/objects/SMB_Lead__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2-10</fullName>
            </value>
            <value>
                <fullName>10-25</fullName>
            </value>
            <value>
                <fullName>25-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-500</fullName>
            </value>
            <value>
                <fullName>500 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>