care/force-app/main/default/objects/SMB_Lead__c/fields/Partner_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Location_ID__c</fullName>
    <description>Care.com SMB location ID</description>
    <inlineHelpText>Care.com SMB location ID</inlineHelpText>
    <label>Partner Location ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>