care/force-app/main/default/objects/SMB_Lead__c/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <description>Original Localeze ID</description>
    <inlineHelpText>Original Localeze ID</inlineHelpText>
    <label>PID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>