care/force-app/main/default/objects/SMB_Lead__c/fields/Primary_Camp_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Camp_Type__c</fullName>
    <label>Primary Camp Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outdoors/Adventure/Travel</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Special Needs</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>