care/force-app/main/default/objects/SMB_Lead__c/fields/RDC_Details__c.field-meta.xml
<CustomField>
    <fullName>RDC_Details__c</fullName>
    <label>RDC Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>