care/force-app/main/default/objects/SMB_Lead__c/fields/RDC_Review__c.field-meta.xml
<CustomField>
    <fullName>RDC_Review__c</fullName>
    <label>RDC Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>