care/force-app/main/default/objects/SMB_Lead__c/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <label>Service ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>