care/force-app/main/default/objects/SMB_Lead__c/fields/Status_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Company__c</fullName>
    <label>Status of Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Pending RDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>