care/force-app/main/default/objects/SMB_Lead__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Care Center</fullName>
            </value>
            <value>
                <fullName>Tutoring Program</fullName>
            </value>
            <value>
                <fullName>Hair/Nail Salon</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Cleaning Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>