care/force-app/main/default/objects/SMB_Lead__c/listViews/Camps_Vetting_Queue.listView-meta.xml
<ListView>
    <fullName>Camps_Vetting_Queue</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Status_of_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>camp</value>
    </filters>
    <filters>
        <field>Status_of_Company__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>tpime</value>
    </filters>
    <label>Camps Vetting Queue</label>
</ListView>