care/force-app/main/default/objects/SMB_Lead__c/listViews/My_SMB_Leads.listView-meta.xml
<ListView>
    <fullName>My_SMB_Leads</fullName>
    <columns>NAME</columns>
    <columns>Service_ID__c</columns>
    <columns>Status_of_Company__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status_of_Company__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>My SMB Leads</label>
</ListView>