care/force-app/main/default/objects/SMB_Lead__c/listViews/Q_Pending_RDC.listView-meta.xml
<ListView>
    <fullName>Q_Pending_RDC</fullName>
    <columns>NAME</columns>
    <columns>Service_ID__c</columns>
    <columns>Status_of_Company__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RDC_Review__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_of_Company__c</field>
        <operation>equals</operation>
        <value>Pending RDC</value>
    </filters>
    <label>Q: Pending RDC</label>
</ListView>